--- a/src/main/resources/static/asn2.html
+++ b/src/main/resources/static/asn2.html
@@ -1,3 +1,5 @@
+<!--asn2-doc\src\main\resources\static-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,21 +11,23 @@
   <table>
     <thead>
       <tr>
+        <th>StudentID</th>
         <th>Name</th>
         <th>Weight</th>
         <th>Height</th>
         <th>Hair Color</th>
         <th>GPA</th>
         <th>Action</th>
-      </tr>
+        </tr>
     </thead>
     <tbody>
       <tr>
+        <td><input type="number" class="id-input"></td>
         <td><input type="text" class="name-input"></td>
-        <td><input type="text" class="weight-input"></td>
-        <td><input type="text" class="height-input"></td>
-        <td><input type="text" class="hair-color-input"></td>
-        <td><input type="text" class="gpa-input"></td>
+        <td><input type="number" class="weight-input"></td>
+        <td><input type="number" class="height-input"></td>
+        <td><input type="color" class="hair-color-input"></td>
+        <td><input type="number" class="gpa-input"></td>
         <td><button onclick="addStudent()">Add</button></td>
       </tr>
     </tbody>
@@ -33,6 +37,7 @@
   <table id="students-table">
     <thead>
       <tr>
+        <th>StudentID</th>
         <th>Name</th>
         <th>Weight</th>
         <th>Height</th>
