--- a/src/main/resources/static/asn2.html
+++ b/src/main/resources/static/asn2.html
@@ -1,4 +1,5 @@
-<!--asn2-doc\src\main\resources\static-->
+<!-- Place: asn2-doc\src\main\resources\static -->
+<!-- Filename: asn2.html -->
 
 <!DOCTYPE html>
 <html>
